--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,1 +1,30 @@
-
+version: 3.0.{build}
+clone_depth: 1
+before_build:
+  - git submodule update --init
+  - mkdir build
+  - cd build
+  - set tag=x%APPVEYOR_REPO_TAG_NAME%
+  - if %tag:~,2% == xv (set BUILD_TYPE=RelWithDebInfo) else (set BUILD_TYPE=Debug)
+  - cmake -G"Visual Studio 12" -T v120 ..
+build_script:
+  - msbuild "src\solvespace.vcxproj" /verbosity:minimal /property:Configuration=%BUILD_TYPE% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+  - msbuild "src\solvespace-cli.vcxproj" /verbosity:minimal /property:Configuration=%BUILD_TYPE% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+  - msbuild "test\solvespace-testsuite.vcxproj" /verbosity:minimal /property:Configuration=%BUILD_TYPE% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+test_script:
+  - bin\%BUILD_TYPE%\solvespace-testsuite.exe
+artifacts:
+  - path: build\bin\%BUILD_TYPE%\solvespace.exe
+    name: solvespace.exe
+  - path: build\bin\%BUILD_TYPE%\solvespace-cli.exe
+    name: solvespace-cli.exe
+  - path: build\bin\%BUILD_TYPE%\solvespace.pdb
+    name: solvespace.pdb
+deploy:
+  - provider: GitHub
+    auth_token:
+      secure: P9/pf2nM+jlWKe7pCjMp41HycBNP/+5AsmE/TETrDUoBOa/9WFHelqdVFrbRn9IC
+    description: ""
+    artifact: solvespace.exe,solvespace-cli.exe,solvespace.pdb
+    on:
+      appveyor_repo_tag: true
