--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,11 @@
 version: 3.0.{build}
 clone_depth: 1
 build_script:
+  - make
   - msbuild "Panelize.cpp" /verbosity:minimal /property:Configuration=%BUILD_TYPE% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-test_script:
-  - bin\%BUILD_TYPE%\solvespace-testsuite.exe
 artifacts:
-  - path: build\bin\%BUILD_TYPE%\solvespace.exe
-    name: solvespace.exe
-  - path: build\bin\%BUILD_TYPE%\solvespace-cli.exe
-    name: solvespace-cli.exe
-  - path: build\bin\%BUILD_TYPE%\solvespace.pdb
-    name: solvespace.pdb
+  - path: solvespace.exe
+    name: panelize.exe
 deploy:
   - provider: GitHub
     auth_token:
