--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ install:
   - sudo apt-get install -y python-dev python-numpy libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev
 
   # Download v3.0.0 .zip file and extract.
-  - curl -sL https://github.com/Itseez/opencv/archive/2.0.0-beta.zip > opencv.zip
+  - curl -sL https://github.com/Itseez/opencv/archive/3.0.0-beta.zip > opencv.zip
   - unzip opencv.zip
-  - cd opencv-2.0.0-beta
+  - cd opencv-3.0.0-beta
   
   # Create a new 'build' folder.
   - mkdir build
@@ -44,7 +44,6 @@ install:
   - cd ../../
 
 script:
-  - cd [project_dir]
   - cmake .
   - make
-  - ./[application_name] [params]
+  - ./Panelize
